# phoebe

./: Cargo.toml  README.md
.github/workflows/: build.yml
crates/phoebe/: Cargo.toml
crates/phoebe-macro/: Cargo.toml
crates/phoebe-macro/src/: internal.rs  lib.rs
crates/phoebe/src/: lib.rs
