[package]
name = "phoebe"
version = "0.1.0"
edition = "2021"
description = "Automatic differentiation for Rust."
license = "MIT"
repository = "https://github.com/samestep/phoebe"

[dependencies]
bumpalo = { version = "3", features = ["collections"] }
paste = "1.0.15"
phoebe-macro = { path = "../phoebe-macro" }
